--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
             <li><a href="#lorem4">Ir a Lorem4</a></li>
             <li><a href="#lorem5">Ir a Lorem5</a></li>
         </ul>
-        <h1>Bienbenidos a mi Pagina</h1>
+        <h1>Bienvenidos a mi Pagina</h1>
 
     </body>
 </html>
